# sks32kmon

./: .pre-commit-config.yaml  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: bump-and-tag.yml  ci.yml  publish.yml  release.yml
docs/: API.md  DESIGN.md
src/: cli.rs  client.rs  config.rs  main.rs  models.rs  tui.rs
tests/: api_tests.rs  models_tests.rs
